Added hand-written math (minor glitches)

--- a/Assignment 2/README
+++ b/Assignment 2/README
@@ -170,3 +170,4 @@ References:
    - Wikipedia (in AffineMatrix)
    - The TA (http://pages.cpsc.ucalgary.ca/~eharris/cpsc453/tut09/)
    - md2 and pcx
+   - manpages for gluLookAt
