--- a/Assignment 2/README
+++ b/Assignment 2/README
@@ -31,12 +31,12 @@ Brief User Manual:
       or click "custom..." to load any model on the filesystem.
 
       Custom models can be loaded using the "Custom Model Selection" frame.  You can select
-      a model, skin, weapon model, and weapon skin.  Options will be displayed as you select
-      them. 
+      a model, skin, weapon model, and weapon skin.  Selections will be displayed as they are
+      entered.
 
       For built-in models, the associated texture and weapon will be loaded automatically,
       through a basic sniffing algorithm.  If the algorithm fails, you can load the models
-      manually from the "models" folder.
+      manually from the included "models" folder.
 
    Affine Transformations
       From this tab, you can customize the translation, rotation and scale of the model.
@@ -89,7 +89,7 @@ Data-Structures Used:
    AffineMatrix
       This structure represents a four-dimensional Affine transformation matrix.  The structure
       is implemented with a simple two-dimensional array of doubles, stored in column-major
-      order (e.g. element[x][y]).  This is to minimize confusion, as everything else in 
+      order (e.g. element[x][y]).  This is to minimize my own confusion, as everything else in 
       OpenGL is "x, then y", and I get confused by row/column too easily.
 
    Vector
@@ -125,8 +125,8 @@ Data-Structures Used:
       More information is available in the Qt documentation:
       http://doc.qt.digia.com/4.7/qmap.html
 
+
 Algorithms Used:
-   
    Face Normal Calculation
       Face normals are calculated by finding the offsets between triangle points 0 and 1, and
       triangle points 0 and 2, then cross-producting and normalizing the result.
@@ -134,6 +134,15 @@ Algorithms Used:
    Vertex Normal Calculation
       Vertex normals are calculated by determining which faces each vertex participates in, 
       and then averaging the face normals of each of these faces.
+
+   Virtual Trackball
+      The Virtual Trackball is the rotation algorithm used to implement click+drag functionality.
+      It operates by assigning cursor coordinates to a virtual sphere, then calculating the difference
+      between two coordinates as a rotation (by performing a cross product between the two points).
+      
+      This cross product is then used to create an axis-angle Affine Transformation matrix, which
+      represents the rotation between the two points.
+
 
 Implemented Requirements:
    I have implemented all of the required functional requirements listed in the assignment 
@@ -170,10 +179,11 @@ Implemented Requirements:
    I have also implemented several bonus requirements:
 
    - B1 - Animation                   - Animations are constantly looping
+
    - B3 - Transformation from Scratch - Click "Use Hand-Written Math" on the "Render Options" tab
    - B4 - Viewing from Scratch        - Click "Use Hand-Written Math" on the "Render Options" tab
 
-   - B6 - Multiple Viewports          - Top, Front, Side and Perspective viewports are always visible
+   - B6 - Multiple Viewports          - Top, Front, Side and Perspective viewports are always visible.
    - B7 - Alternative Rendering       - Click "Alternative Rendering Mode" on the "Render Options" tab
 
 
