--- a/Assignment 3/README
+++ b/Assignment 3/README
@@ -116,6 +116,7 @@ Algorithms Used
       - If the ray intersects an object first, it's in shadow, and only ambient light is used
       - If the ray reaches the light, then diffuse and specular lighting is calculated using
         the Phong lighting equations
+   Shadows, Reflections, etc
 
 
 Implemented Requirements:
